refact: better names for the repository class + add abastraction + unit test for /util/json.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,7 @@ build-backend = "poetry.core.masonry.api"
 
 [project.scripts]
 vaultscan = "vaultscan.main:main"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+
