--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "click (>=8.1.8,<9.0.0)",
     "tabulate (>=0.9.0,<0.10.0)",
     "azure-identity (>=1.20.0,<2.0.0)",
-    "azure-keyvault-secrets (>=4.9.0,<5.0.0)"
+    "azure-keyvault-secrets (>=4.9.0,<5.0.0)",
+    "pykeepass (>=4.1.0.post1,<5.0.0)"
 ]
 packages = [{ include = "vaultscan" }]
 
