feat: encrypt keepass password when saving the vault on the configuration file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "tabulate (>=0.9.0,<0.10.0)",
     "azure-identity (>=1.20.0,<2.0.0)",
     "azure-keyvault-secrets (>=4.9.0,<5.0.0)",
-    "pykeepass (>=4.1.0.post1,<5.0.0)"
+    "pykeepass (>=4.1.0.post1,<5.0.0)",
+    "keyring (>=25.6.0,<26.0.0)"
 ]
 packages = [{ include = "vaultscan" }]
 
