--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "azure-identity (>=1.20.0,<2.0.0)",
     "azure-keyvault-secrets (>=4.9.0,<5.0.0)",
     "pykeepass (>=4.1.0.post1,<5.0.0)",
-    "keyring (>=25.6.0,<26.0.0)"
+    "keyring (>=25.6.0,<26.0.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)"
 ]
 packages = [{ include = "vaultscan" }]
 
@@ -26,4 +27,5 @@ vaultscan = "vaultscan.main:main"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
+coverage = "^7.6.12"
 
