ci: trying to install keyrings.alt to be used on github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,6 @@ jobs:
       - name: Install dependencies
         run: poetry install --no-interaction --all-groups
       - name: Run tests
-        run: poetry run pytest
+        run: |
+          poetry add keyring.alt
+          poetry run pytest
