--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,5 +32,5 @@ jobs:
         run: poetry install --no-interaction --all-groups
       - name: Run tests
         run: |
-          poetry add keyring.alt
+          poetry add keyrings.alt
           poetry run pytest
