--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: Python application
 on:
   pull_request:
     branches: [ "main" ]
+  push:
+    branches: [ "main" ]
 
 permissions:
   contents: write
@@ -33,6 +35,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     name: Create release and upload artifacts
+    if: github.event_name == 'push'  # just when merge to main
     needs: [unit_tests]
     steps:
       - uses: actions/checkout@v3
@@ -55,10 +58,11 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ env.VERSION }}
-          name: Release v${{ env.VERSION }}
-          body: "Automated release for version v${{ env.VERSION }}"
+          tag_name: ${{ env.VERSION }}
+          name: Release ${{ env.VERSION }}
+          body: "Automated release for version ${{ env.VERSION }}"
           files: |
+            dist/*.tar.gz
             dist/*.whl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
