--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Create release and upload artifacts
     if: github.event_name == 'push'  # just when merge to main
-    needs: [unit_tests, e2e_tests]
+    needs: [unit_tests]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.11
