--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,5 +34,5 @@ pytest-console-scripts = "^1.4.1"
 version_variable = "pyproject.toml:__version__"
 branch = "main"
 tag_format = "{version}"
-commit_parser = "angular"
+commit_parser = "conventional"
 changelog_file = "CHANGELOG.md"
