--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ coverage = "^7.6.12"
 pytest-console-scripts = "^1.4.1"
 
 [tool.semantic_release]
-version_variable = "pyproject.toml:__version__"
+version_variable = "vaultscan/main.py:__version__"
 branch = "main"
 tag_format = "{version}"
 commit_parser = "conventional"
