--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
         pip install python-semantic-release
     - name: Run Semantic Release (Versioning Only)
       run: |
-        semantic-release version --branch feat/semver
+        semantic-release version
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   # e2e_tests:
