--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "VaultScan"
-version = "0.3.3"
+dynamic = ["version"]
 description = "Searching objects across vaults"
 authors = [
     {name = "gabrielrih@gmail.com"}
@@ -18,6 +18,9 @@ dependencies = [
 ]
 packages = [{ include = "vaultscan" }]
 
+[tool.poetry]
+version = "1.0.0"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
@@ -32,7 +35,7 @@ pytest-console-scripts = "^1.4.1"
 
 [tool.semantic_release]
 version_variables = [
-    "vaultscan/main.py:__version__"
+    "vaultscan/__init__.py:__version__"
 ]
 
 [tool.semantic_release.branches.main]
