--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,10 +38,10 @@ version_variables = [
     "vaultscan/__init__.py:__version__"
 ]
 #build_command = "poetry build"
-assets = [
-    "dist/*.tar.gz",
-    "dist/*.whl"
-]
+#assets = [
+#    "dist/*.tar.gz",
+#    "dist/*.whl"
+#]
 
 [tool.semantic_release.branches.main]
 match = "(main|master)"
