--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,9 +56,7 @@ jobs:
         pip install python-semantic-release
     - name: Run Semantic Release (Versioning Only)
       run: |
-        # FIX IT
-        semantic-release version --no-tag
-        #semantic-release version --print
+        semantic-release version --no-tag --no-vcs-release
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Inject new version on Poetry
@@ -67,10 +65,17 @@ jobs:
         poetry version $PACKAGE_VERSION
         cat pyproject.toml
         # FIX IT
-        # Push the change on PR
+        # Push the change on PR. Is there need to do that?
+    - name: Build package
+      run: |
+          poetry install --no-interaction
+          poetry build
     - name: Checking releases on dist folder
       run: |
         ls ./dist/
+    - name: Creating release version
+      run: |
+        semantic-release publish 
   release:
     runs-on: ubuntu-latest
     name: Create release and upload artifacts
