--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
 packages = [{ include = "vaultscan" }]
 
 [tool.poetry]
-version = "1.0.0"
+version = "1.0.0-dev"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
