--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,6 @@ pytest-console-scripts = "^1.4.1"
 version_variables = [
     "vaultscan/__init__.py:__version__"
 ]
-#build_command = "poetry build"
 assets = [
     "dist/*.tar.gz",
     "dist/*.whl"
@@ -46,7 +45,7 @@ assets = [
 [tool.semantic_release.branches.main]
 match = "(main|master)"
 prerelease_token = "rc"
-prerelease = true
+prerelease = false
 
 [tool.semantic_release.branches.semver]
 match = "feat/semver"
