ci: fix the publish error (it didnt upload the dist files)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
       run: |
         echo "🔹Generating a new package version and a tag using semver"
         #semantic-release version --no-vcs-release --skip-build
-        semantic-release version --prelease --vcs-release --tag --skip-build
+        semantic-release version --prerelease --vcs-release --tag --skip-build
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Build package
