--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ assets = [
     "dist/*.tar.gz",
     "dist/*.whl"
 ]
-build_command = ".\build_package.sh"
+#build_command = ".\build_package.sh"
+build_command = "poetry version $NEW_VERSION && poetry build"
 
 [tool.semantic_release.branches.main]
 match = "(main|master)"
