fix: generating package on the artifacts folder instead of the dist (because the dist is on the .gitignore file)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,12 +37,13 @@ pytest-console-scripts = "^1.4.1"
 version_variables = [
     "vaultscan/__init__.py:__version__"
 ]
-assets = [
-    "./dist/*.tar.gz",
-    "./dist/*.whl"
-]
+assets = [ "artifacts/" ]
+#assets = [
+#    "./dist/*.tar.gz",
+#    "./dist/*.whl"
+#]
 # The NEW_VERSION variable is automatically injected by semantic_release: https://python-semantic-release.readthedocs.io/en/latest/configuration.html#build-command
-build_command = "poetry version $NEW_VERSION && poetry install --no-interaction && poetry build && ls ./dist/"
+build_command = "poetry version $NEW_VERSION && poetry build -o artifacts && ls -ls ./artifacts/"
 
 [tool.semantic_release.branches.release]
 match = "(main|master)"
