--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,24 +51,24 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
           echo "$HOME/.local/bin" >> $GITHUB_PATH
           poetry --version
-    # - name: Install python-semantic-release
-    #   run: |
-    #     pip install python-semantic-release
-    # - name: Release
-    #   run: |
-    #     echo "🔹Using semantic-release to generate the new pre-release version"
-    #     semantic-release version --as-prerelease --vcs-release --tag
-    #   env:
-    #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name:  Semantic Version Release
+    - name: Install python-semantic-release
+      run: |
+        pip install python-semantic-release
+    - name: Release
       id: release
-      uses: python-semantic-release/python-semantic-release@v9.21.0
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        git_committer_name: "github-actions"
-        git_committer_email: "actions@users.noreply.github.com"
-
+      run: |
+        echo "🔹Using semantic-release to generate the new pre-release version"
+        semantic-release version --as-prerelease --vcs-release --tag
+      
+        echo "🔹Getting the generated tag"
+        GENERATED_TAG=$(git describe --tags --abbrev=0)
+        echo "Generated tag: $GENERATED_TAG"
+        
+        echo "🔹Setting the tag as an output for use in subsequent steps"
+        echo "tag=$GENERATED_TAG" >> $GITHUB_ENV
+        echo "::set-output name=tag::$GENERATED_TAG"
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Upload artifacts on release
       id: upload
       uses: softprops/action-gh-release@v1
@@ -78,6 +78,23 @@ jobs:
         files: "dist/*"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # - name:  Semantic Version Release
+    #   id: release
+    #   uses: python-semantic-release/python-semantic-release@v9.21.0
+    #   with:
+    #     github_token: ${{ secrets.GITHUB_TOKEN }}
+    #     git_committer_name: "github-actions"
+    #     git_committer_email: "actions@users.noreply.github.com"
+
+    # - name: Upload artifacts on release
+    #   id: upload
+    #   uses: softprops/action-gh-release@v1
+    #   if: steps.release.outputs.released == 'true'
+    #   with:
+    #     tag_name: ${{ steps.release.outputs.tag }}
+    #     files: "dist/*"
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     # - name: Run Semantic Release (Versioning Only)
     #   run: |
