--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           poetry run coverage report
   release:
     runs-on: ubuntu-latest
-    name: Versioning and pre-release
+    name: Versioning and release
     needs: [unit_tests]
     steps:
     - name: Checkout repository
@@ -54,10 +54,10 @@ jobs:
     - name: Install python-semantic-release
       run: |
         pip install python-semantic-release
-    - name: Pre-release
+    - name: Release
       id: release
       run: |
-        echo "🔹Using semantic-release to generate the new pre-release version"
+        echo "🔹Using semantic-release to generate the new release version"
         semantic-release version --vcs-release --tag
       
         echo "🔹Getting the generated tag"
@@ -69,7 +69,7 @@ jobs:
         echo "::set-output name=tag::$GENERATED_TAG"
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Upload artifacts on pre-release
+    - name: Upload artifacts on release
       id: upload
       uses: softprops/action-gh-release@v1
       if: steps.release.outputs.released == 'true'
@@ -78,48 +78,3 @@ jobs:
         files: "dist/*"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  # release:
-  #   runs-on: ubuntu-latest
-  #   name: Create release and upload artifacts
-  #   if: github.event_name == 'push'  # just when merge to main
-  #   needs: [unit_tests, semver]
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Set up Python 3.11
-  #       uses: actions/setup-python@v3
-  #       with:
-  #         python-version: "3.11"
-  #     - name: Install Poetry
-  #       run: |
-  #         curl -sSL https://install.python-poetry.org | python3 -
-  #         echo "$HOME/.local/bin" >> $GITHUB_PATH
-  #         poetry --version
-  #     - name: Get version from pyproject.toml
-  #       run: |
-  #         echo "VERSION=$(poetry version -s)" >> $GITHUB_ENV
-  #     - name: Build package
-  #       run: |
-  #         poetry install --no-interaction
-  #         poetry build
-  #     - name: Create GitHub Release Version
-  #       uses: softprops/action-gh-release@v1
-  #       with:
-  #         tag_name: ${{ env.VERSION }}
-  #         name: ${{ env.VERSION }}
-  #         body: "Automated release for version ${{ env.VERSION }}"
-  #         files: |
-  #           dist/*.tar.gz
-  #           dist/*.whl
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #     - name: Create GitHub Latest Release
-  #       uses: softprops/action-gh-release@v1
-  #       with:
-  #         tag_name: latest
-  #         name: latest
-  #         body: "Automated release for the latest version"
-  #         files: |
-  #           dist/*.tar.gz
-  #           dist/*.whl
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
