--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,10 +64,10 @@ jobs:
         GENERATED_TAG=$(git describe --tags --abbrev=0)
         echo "Generated tag: $GENERATED_TAG"
         
-        echo "🔹Setting the tag as an output for use in subsequent steps"
-        # echo "tag=$GENERATED_TAG" >> $GITHUB_ENV
+        echo "🔹Setting the tag as an environment variable to be used in subsequent steps"
+        echo "tag=$GENERATED_TAG" >> $GITHUB_ENV
         # echo "::set-output name=tag::$GENERATED_TAG"
-        echo "tag=$GENERATED_TAG" >> $GITHUB_OUTPUT
+        #echo "tag=$GENERATED_TAG" >> $GITHUB_OUTPUT
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Upload artifacts on release
@@ -75,7 +75,8 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: steps.release.outputs.released == 'true'
       with:
-        tag_name: ${{ steps.release.outputs.tag }}
+        #tag_name: ${{ steps.release.outputs.tag }}
+        tag_name: ${{ env.TAG }}
         files: "dist/*"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
