--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,9 +65,9 @@ jobs:
         echo "Generated tag: $GENERATED_TAG"
         
         echo "🔹Setting the tag as an environment variable to be used in subsequent steps"
-        echo "tag=$GENERATED_TAG" >> $GITHUB_ENV
+        #echo "tag=$GENERATED_TAG" >> $GITHUB_ENV
         # echo "::set-output name=tag::$GENERATED_TAG"
-        #echo "tag=$GENERATED_TAG" >> $GITHUB_OUTPUT
+        echo "tag=$GENERATED_TAG" >> $GITHUB_OUTPUT
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Upload artifacts on release
@@ -75,8 +75,8 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: steps.release.outputs.released == 'true'
       with:
-        #tag_name: ${{ steps.release.outputs.tag }}
-        tag_name: ${{ env.TAG }}
+        tag_name: ${{ steps.release.outputs.tag }}
+        #tag_name: ${{ env.TAG }}
         files: "dist/*"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
