--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,8 +57,8 @@ jobs:
     - name: Release
       id: release
       run: |
-        # Trigger final release for push to main
-        if [[ "${{ github.event_name }}" == "push" ]]; then
+        if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+          # Trigger final release for push to main
           echo "🔹Using semantic-release to generate the release version"
           semantic-release version --vcs-release --tag
         else
