--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "azure-keyvault-secrets (>=4.9.0,<5.0.0)",
     "pykeepass (>=4.1.0.post1,<5.0.0)",
     "keyring (>=25.6.0,<26.0.0)",
-    "python-dotenv (>=1.0.1,<2.0.0)"
+    "python-dotenv (>=1.0.1,<2.0.0)",
+    "bitwarden-sdk (>=1.0.0,<2.0.0)"
 ]
 packages = [{ include = "vaultscan" }]
 
