--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "pykeepass (>=4.1.0.post1,<5.0.0)",
     "keyring (>=25.6.0,<26.0.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
-    "bitwarden-sdk (>=1.0.0,<2.0.0)"
+    "bitwarden-sdk (>=1.0.0,<2.0.0)",
+    "dotenv (>=0.9.9,<0.10.0)"
 ]
 packages = [{ include = "vaultscan" }]
 
